- Improved the look of the chessboard in style.css - Started working on chat by adding the place for it in game.html and style.css (set height and overflow-y for chat) - Added links for playing with strangers to index.html - Fixed playing with strangers returning local path instead of redirect

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,20 @@
 .move-button {
     color: #000000;
-    font-size: 20;
-    width: 30px;
-    height: 30px;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
     text-align: center;
 }
 .promote-button {
-    font-size: 15;
+    font-size: 15px;
 }
 
 .white-bg {background-color: #FFFFFF;}
-.black-bg {background-color: #707070;}
+.black-bg {background-color: #808080;}
 .white-red-bg {background-color: #FFD0D0;}
 .black-red-bg {background-color: #A07878;}
+
+.chat {
+    height: 100%;
+    overflow-y: auto;
+}
